--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 html,
 body {
   padding: 0;
@@ -13,4 +14,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+:hover .icon {
+  cursor: pointer;
 }
